--- a/index.html
+++ b/index.html
@@ -1,1 +1,130 @@
-hello dsf
+<style>
+  #cookie_bar {
+    z-index: 99999;
+    position: fixed;
+    top: 0;
+    opacity: 0.95;
+    text-align: center;
+    background: #f5f5f6;
+    border-bottom: 1px solid #d2d2d7;
+    padding-top: 7.5px;
+    padding-bottom: 7.5px;
+    font-size: 14px;
+    padding: 5px 5%;
+    font-family: sans-serif;
+    line-height: 23px
+}
+
+#cookie_close {
+  background-color: #50505a;
+  padding: 4px 12px;
+  border-radius: 3px;
+  color: white;
+  cursor: pointer;
+  display:inline-block;
+}
+
+.policy_link {
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+  border-bottom: 1.5px solid #EC7404;
+  padding: 2px;
+}
+
+.cookie_close {
+  color: #FFFFFF;
+  background-color: #EC7404;
+  padding-left: 10px;
+  padding-right: 10px;
+  font-weight: bold;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  margin-left: 10px;
+  cursor: pointer;
+}
+</style>
+<script src="https://code.jquery.com/jquery-3.4.1.js"
+			  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+			  crossorigin="anonymous"></script>
+<script>
+var browser_name = '';
+isIE = /*@cc_on!@*/false || !!document.documentMode;
+isEdge = !isIE && !!window.StyleMedia;
+if(navigator.userAgent.indexOf("Chrome") != -1 && !isEdge)
+{
+    browser_name = 'chrome';
+}
+else if(navigator.userAgent.indexOf("Safari") != -1 && !isEdge)
+{
+    browser_name = 'safari';
+}
+else if(navigator.userAgent.indexOf("Firefox") != -1 ) 
+{
+    browser_name = 'firefox';
+}
+else if((navigator.userAgent.indexOf("MSIE") != -1 ) || (!!document.documentMode == true )) //IF IE > 10
+{
+    browser_name = 'ie';
+}
+else if(isEdge)
+{
+    browser_name = 'edge';
+}
+else 
+{
+   browser_name = 'other-browser';
+}
+jQuery(document).ready(function(){
+var a=document.createElement("div");
+a.setAttribute("id","cookie_bar");
+var b=document.querySelector("body");
+
+if(browser_name=="ie" || browser_name=="edge"){
+b.insertBefore(a);
+}
+else{
+b.append(a);
+}
+document.getElementById("cookie_bar").innerHTML='We use cookies to guarantee the functionality and performance of this website. We collect statistical data to optimise the use of our website. You will find a description of the cookies we use in our \x3ca class\x3d"policy_link" href\x3d"/privacy-statement"\x3eprivacy statement\x3c/a\x3e. If you agree to the use of cookies, please click \x3cspan class\x3d"cookie_close"\x3eAccept\x3c/span\x3e';
+jQuery(".cookie_close").click(function(){jQuery("#cookie_bar").fadeOut("normal",function(){jQuery(this).remove()});dataLayer.push({event:"cookie_consent"})})});
+(function(a){a.forEach(function(a){a.hasOwnProperty("prepend")||Object.defineProperty(a,"prepend",{configurable:!0,enumerable:!0,writable:!0,value:function(){var a=Array.prototype.slice.call(arguments),c=document.createDocumentFragment();a.forEach(function(a){var b=a instanceof Node;c.appendChild(b?a:document.createTextNode(String(a)))});this.insertBefore(c,this.firstChild)}})})})([Element.prototype,Document.prototype,DocumentFragment.prototype]);
+  
+  function getInternetExplorerVersion() {
+   // Return cached result if avalible, else get result then cache it.
+    if (browser.prototype._cachedResult)
+        return browser.prototype._cachedResult;
+
+    // Opera 8.0+
+    var isOpera = (!!window.opr && !!opr.addons) || !!window.opera || navigator.userAgent.indexOf(' OPR/') >= 0;
+
+    // Firefox 1.0+
+    var isFirefox = typeof InstallTrigger !== 'undefined';
+
+    // Safari 3.0+ "[object HTMLElementConstructor]" 
+    var isSafari = /constructor/i.test(window.HTMLElement) || (function (p) { return p.toString() === "[object SafariRemoteNotification]"; })(!window['safari'] || safari.pushNotification);
+
+    // Internet Explorer 6-11
+    var isIE = /*@cc_on!@*/false || !!document.documentMode;
+
+    // Edge 20+
+    var isEdge = !isIE && !!window.StyleMedia;
+
+    // Chrome 1+
+    var isChrome = !!window.chrome && !!window.chrome.webstore;
+
+    // Blink engine detection
+    var isBlink = (isChrome || isOpera) && !!window.CSS;
+
+    return browser.prototype._cachedResult =
+        isOpera ? 'Opera' :
+        isFirefox ? 'Firefox' :
+        isSafari ? 'Safari' :
+        isChrome ? 'Chrome' :
+        isIE ? 'IE' :
+        isEdge ? 'Edge' :
+        isBlink ? 'Blink' :
+        "Don't know";
+        };
+
+</script>
